--- a/Views/Academy/Index.cshtml
+++ b/Views/Academy/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="jumbotron">
     <h1>@ViewData["Title"]</h1>
-    <h2>Escuela</h2>
+    <h2>Academia de tecnologías modernas</h2>
     <h3>Nombre: </h3>
     <p>@Model.Name</p>
     <h3>Año de Fundación: </h3>
