--- a/Views/Shared/SimpleLayout.cshtml
+++ b/Views/Shared/SimpleLayout.cshtml
@@ -27,11 +27,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">AspIron Academy</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                AspIron Academy
+            </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a asp-area="" asp-controller="Academy" asp-action="Index">Inicio</a></li>
+                <li class="active"><a asp-area="" asp-controller="Academy" asp-action="Index">
+                    Inicio
+                </a></li>
                 <li><a href="#about">Acerca de</a></li>
                 <li><a href="#contact">Contacto</a></li>
                 <li class="dropdown">
