--- a/Views/Shared/SimpleLayout.cshtml
+++ b/Views/Shared/SimpleLayout.cshtml
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+            <a class="navbar-brand" asp-area="" asp-controller="Academy" asp-action="Index">
                 AspIron Academy
             </a>
         </div>
