Models: new models were added: Alumno, Adignatura, Curso, Evaluacion, llaves, tipos..., AlumnoPromedio.

--- a/Views/Academy/Index.cshtml
+++ b/Views/Academy/Index.cshtml
@@ -7,9 +7,9 @@
     <h1>@ViewData["Title"]</h1>
     <h2>Academia de tecnologías modernas</h2>
     <h3>Nombre: </h3>
-    <p>@Model.Name</p>
+    <p>@Model.Nombre</p>
     <h3>Año de Fundación: </h3>
-    <p>@Model.FundationYear</p>
+    <p>@Model.AñoCreacion</p>
     
     <p><i>@ViewData["DatoDinamico"]</i></p>
 </div>
