--- a/Views/Shared/SimpleLayout.cshtml
+++ b/Views/Shared/SimpleLayout.cshtml
@@ -36,7 +36,7 @@
                 <li class="active"><a asp-area="" asp-controller="Academy" asp-action="Index">
                     Inicio
                 </a></li>
-                <li><a href="#about">Acerca de</a></li>
+                <li><a asp-area="" asp-controller="Asignatura" asp-action="Index">Asignaturas</a></li>
                 <li><a href="#contact">Contacto</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
