Asignatura: Sending data through controller to Asignatura view.

--- a/Views/Academy/Index.cshtml
+++ b/Views/Academy/Index.cshtml
@@ -4,8 +4,11 @@
     Layout = "SimpleLayout";
 }
 
-<div class="jumbotron">
+<div class="text-center">
     <h1>@ViewData["Title"]</h1>
+</div>
+<div class="jumbotron">
+    
     <h2>Academia de tecnologías modernas</h2>
     <h3>Nombre: </h3>
     <p>@Model.Nombre</p>
