--- a/Views/Shared/AsignaturaSimple.cshtml
+++ b/Views/Shared/AsignaturaSimple.cshtml
@@ -1,5 +1,6 @@
 @model Asignatura
 
 <!--Este es una vista parcial y se usa para reutilizar codigo en las vistas-->
-<h2>Nombre: @Model.Nombre</h2>
+<h2 class="bg-primary">Nombre: @Model.Nombre</h2>
 <p>Id: @Model.UniqueId</p>
+<p>Fecha de lanzamiento del curso: <i>@Model.FechaDeLanzamiento</i></p>
