--- a/Views/Shared/AcademyBaseSimple.cshtml
+++ b/Views/Shared/AcademyBaseSimple.cshtml
@@ -1,6 +1,5 @@
-@model Asignatura
+@model AcademyBase
 
 <!--Este es una vista parcial y se usa para reutilizar codigo en las vistas-->
 <h2 class="bg-primary">Nombre: @Model.Nombre</h2>
 <p>Id: @Model.UniqueId</p>
-<p>Fecha de lanzamiento del curso: <i>@Model.FechaDeLanzamiento</i></p>
