--- a/Views/Shared/SimpleLayout.cshtml
+++ b/Views/Shared/SimpleLayout.cshtml
@@ -37,7 +37,7 @@
                     Inicio
                 </a></li>
                 <li><a asp-area="" asp-controller="Asignatura" asp-action="MultiAsignatura">Asignaturas</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a asp-controller="Alumno" asp-action="MultiAlumno">Alumnos</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Cursos <span class="caret"></span>
