--- a/Views/Alumno/MultiAlumno.cshtml
+++ b/Views/Alumno/MultiAlumno.cshtml
@@ -1,13 +1,16 @@
 @model List<Alumno>
 
 @{
-    ViewData["Title"] = "Todos los alumnos.";
+    ViewData["Title"] = "Todos los alumnos";
     Layout = "SimpleLayout";
 }
 
-<div>
+<div class="text-center">
     <h1>@ViewData["Title"]</h1>
 </div>
-<div>
-    <p></p>
+<div class="jumbotron">
+    @foreach (var alumno in @Model)
+    {
+        <partial name="AcademyBaseSimple" model="alumno"/>
+    }
 </div>
