--- a/Views/Alumno/MultiAlumno.cshtml
+++ b/Views/Alumno/MultiAlumno.cshtml
@@ -1,5 +1,4 @@
 @model List<Alumno>
-
 @{
     ViewData["Title"] = "Todos los alumnos";
     Layout = "SimpleLayout";
@@ -8,23 +7,5 @@
 <div class="text-center">
     <h1>@ViewData["Title"]</h1>
 </div>
-<div class="">
-    
-    <table class="table table-bordered table-hover">
-        <thead>
-        <tr>
-            <th scope="col">Nombre</th>
-            <th scope="col">Id</th>
-        </tr>
-        </thead>
-        <tbody>
-            @foreach (var alumno in @Model)
-            {
-                <tr>
-                    <td>@alumno.Nombre</td>
-                    <td>@alumno.UniqueId</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+
+<partial name="ListAcademyBase"/>
