--- a/Views/Shared/AcademyBaseSimple.cshtml
+++ b/Views/Shared/AcademyBaseSimple.cshtml
@@ -2,4 +2,4 @@
 
 <!--Este es una vista parcial y se usa para reutilizar codigo en las vistas-->
 <h2 class="bg-primary">Nombre: @Model.Nombre</h2>
-<p>Id: @Model.UniqueId</p>
+<p>Id: @Model.Id</p>
