--- a/Views/Shared/ListAcademyBase.cshtml
+++ b/Views/Shared/ListAcademyBase.cshtml
@@ -16,7 +16,7 @@
         {
             <tr>
                 <td>@obj.Nombre</td>
-                <td>@obj.UniqueId</td>
+                <td>@obj.Id</td>
             </tr>
         }
         </tbody>
