Alumno: Using context in AlumnoController to call the database.

--- a/Views/Asignatura/Index.cshtml
+++ b/Views/Asignatura/Index.cshtml
@@ -9,7 +9,7 @@
 </div>
 <div class="jumbotron">
     <!--De esta forma usamos una vista parcial traida desde el folder shared-->
-    <partial name="AsignaturaSimple"/>
+    <partial name="AcademyBaseSimple"/>
 
     <p>Fecha de lanzamiento del curso: <i>@ViewData["FechaDeLanzamiento"]</i></p>
 </div>
