Asignatura: Taking parameters in url by using routing by attribute.

--- a/Views/Asignatura/Index.cshtml
+++ b/Views/Asignatura/Index.cshtml
@@ -11,5 +11,5 @@
     <!--De esta forma usamos una vista parcial traida desde el folder shared-->
     <partial name="AcademyBaseSimple"/>
 
-    <p>Fecha de lanzamiento del curso: <i>@ViewData["FechaDeLanzamiento"]</i></p>
+    <p>Fecha de lanzamiento del curso: <i>@Model.FechaDeLanzamiento</i></p>
 </div>
