--- a/Views/Shared/SimpleLayout.cshtml
+++ b/Views/Shared/SimpleLayout.cshtml
@@ -27,9 +27,11 @@
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Alumno" asp-action="MultiAlumno">Alumnos</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Curso" asp-action="MultiCurso">Cursos</a>
+            </li>
+            
         </ul>
         <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
