--- a/Views/Curso/Create.cshtml
+++ b/Views/Curso/Create.cshtml
@@ -8,3 +8,22 @@
 <div>
     <h1>@ViewData["Title"]</h1>
 </div>
+<div class="row">
+    <div class="col-md-6">
+        <form>
+            <div class="form-group">
+                <label asp-for="Nombre">Nombre</label>
+                <input class="form-control" asp-for="Nombre"/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Direccion">Dirección</label>
+                <input class="form-control" asp-for="Direccion"/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Jornada">Jornada</label>
+                <input class="form-control" asp-for="Jornada"/>
+            </div>
+            <input type="submit" value="Crear el curso"/>
+        </form> 
+    </div>  
+</div>
