--- a/Views/Curso/Create.cshtml
+++ b/Views/Curso/Create.cshtml
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-md-6">
-        <form>
+        <form method="POST">
             <div class="form-group">
                 <label asp-for="Nombre">Nombre</label>
                 <input class="form-control" asp-for="Nombre"/>
