--- a/Views/Curso/Create.cshtml
+++ b/Views/Curso/Create.cshtml
@@ -13,16 +13,26 @@
         <form method="POST">
             <div class="form-group">
                 <label asp-for="Nombre">Nombre</label>
-                <input class="form-control" asp-for="Nombre"/>
+                <input class="form-control" asp-for="Nombre" required/>
             </div>
             <div class="form-group">
                 <label asp-for="Direccion">Dirección</label>
-                <input class="form-control" asp-for="Direccion"/>
+                <input class="form-control" asp-for="Direccion" required/>
             </div>
             <div class="form-group">
                 <label asp-for="Jornada">Jornada</label>
-                <input class="form-control" asp-for="Jornada"/>
+                
+                @Html.DropDownList(
+                    /*asp-for, enum to call*/
+                    "Jornada", Html.GetEnumSelectList<TiposJornadas>(),
+                    /*Text by default*/
+                    "Seleccionar una jornada",
+                    /*css attributes*/
+                    new {@class="form-control"}
+                    )
+                
             </div>
+            
             <input type="submit" value="Crear el curso"/>
         </form> 
     </div>  
