--- a/Views/Curso/Create.cshtml
+++ b/Views/Curso/Create.cshtml
@@ -10,6 +10,9 @@
 </div>
 <div class="row">
     <div class="col-md-6">
+        <!-- Validations errors that come from controller -->
+        <div class="alert-warning" asp-validation-summary="All"></div>
+        
         <form method="POST">
             <div class="form-group">
                 <label asp-for="Nombre">Nombre</label>
@@ -21,19 +24,19 @@
             </div>
             <div class="form-group">
                 <label asp-for="Jornada">Jornada</label>
-                
+
                 @Html.DropDownList(
                     /*asp-for, enum to call*/
                     "Jornada", Html.GetEnumSelectList<TiposJornadas>(),
                     /*Text by default*/
                     "Seleccionar una jornada",
                     /*css attributes*/
-                    new {@class="form-control"}
+                    new {@class = "form-control"}
                     )
-                
+
             </div>
-            
+
             <input type="submit" value="Crear el curso"/>
-        </form> 
+        </form>
     </div>  
 </div>
