--- a/Views/Curso/Update.cshtml
+++ b/Views/Curso/Update.cshtml
@@ -8,6 +8,35 @@
 <div>
     <h1>@ViewData["Title"]</h1>
 </div>
-<div>
-    @Model.Nombre
+<div class="row">
+    <div class="col-md-6">
+        <!-- Validations errors that come from controller -->
+        <div class="alert-warning" asp-validation-summary="All"></div>
+        
+        <form method="POST">
+            <div class="form-group">
+                <label asp-for="Nombre">Nombre</label>
+                <input class="form-control" asp-for="Nombre" required/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Direccion">Dirección</label>
+                <input class="form-control" asp-for="Direccion" required/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Jornada">Jornada</label>
+
+                @Html.DropDownList(
+                    /*asp-for, enum to call*/
+                    "Jornada", Html.GetEnumSelectList<TiposJornadas>(),
+                    /*Text by default*/
+                    "Seleccionar una jornada",
+                    /*css attributes*/
+                    new {@class = "form-control"}
+                    )
+
+            </div>
+
+            <input type="submit" value="Actualizar el curso"/>
+        </form>
+    </div>  
 </div>
