Scaffolding: rebuild all the controllers and view.

--- a/Views/Alumno/Index.cshtml
+++ b/Views/Alumno/Index.cshtml
@@ -1,13 +1,41 @@
-@model Alumno
+@model IEnumerable<AspIron.Models.Alumno>
 
 @{
-    ViewData["Title"] = "Alumno.";
-    Layout = "SimpleLayout";
+    ViewData["Title"] = "Index";
 }
 
-<div>
-    <h1>@ViewData["Title"]</h1>
-</div>
-<div>
-    <partial name="AcademyBaseSimple"/>
-</div>
+<h2>Index</h2>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Curso)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Curso.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
