--- a/Views/Curso/Index.cshtml
+++ b/Views/Curso/Index.cshtml
@@ -1,16 +1,53 @@
-@model Curso
+@model IEnumerable<AspIron.Models.Curso>
+
 @{
-    ViewData["Title"] = "Información del curso";
-    Layout = "SimpleLayout";
+    ViewData["Title"] = "Index";
 }
 
-<div class="text-center">
-    <h1>@ViewData["Title"]</h1>
-</div>
-<div class="jumbotron">
-    @if(ViewData["MensajeExtra"] != null){
-        <div class="alert-success">@ViewData["MensajeExtra"]</div>
-    }
-    <!--De esta forma usamos una vista parcial traida desde el folder shared-->
-    <partial name="AcademyBaseSimple"/>
-</div>
+<h2>Index</h2>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Jornada)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Direccion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Academy)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Jornada)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Direccion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Academy.Id)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
