--- a/Views/Academy/Index.cshtml
+++ b/Views/Academy/Index.cshtml
@@ -1,24 +1,65 @@
-@model Academy
+@model IEnumerable<AspIron.Models.Academy>
+
 @{
-    ViewData["Title"] = "Información de la academia";
-    Layout = "SimpleLayout";
+    ViewData["Title"] = "Index";
 }
 
-<div class="text-center">
-    <h1>@ViewData["Title"]</h1>
-</div>
-<div class="jumbotron">
-    
-    <h2>Academia de tecnologías modernas</h2>
-    <h3>Nombre: </h3>
-    <p>@Model.Nombre</p>
-    <h3>Año de Fundación: </h3>
-    <p>@Model.AñoCreacion</p>
-    <p>Tipo de escuela: @Model.TipoEscuela</p>
-    <address>
-        <p>Dirección: @Model.Direccion</p>
-        <p>Pais: @Model.Pais</p>
-        <p>Ciudad: @Model.Ciudad</p>
-    </address>
-    <p><i>@ViewData["DatoDinamico"]</i></p>
-</div>
+<h2>Index</h2>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AñoCreacion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Pais)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Ciudad)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TipoEscuela)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Direccion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AñoCreacion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Pais)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Ciudad)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TipoEscuela)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Direccion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
